# ai-career-copilot

./: .gitignore  README.md  app.py  career_pipeline.py  llm_provider.py  main.py  pyproject.toml  requirements.txt  role_detector.py  roles_config.py  ui_streamlit.py
agents/: ats_agent.py  experience_agent.py  improvement_agent.py  interview_agent.py  judge_agent.py  llm_answer_agent.py  llm_interview_agent.py  skill_agent.py  state.py
retrieval/: chunking.py  embeddings.py  hybrid.py  hyde.py  loader.py  mmr.py  retriever.py
